--- a/a.css
+++ b/a.css
@@ -93,7 +93,7 @@ a img { border: none; }
     line-height:120px;
     text-align:center;
     background:#ccc;
-    font:120em bold;
+    font20em bold;
 }
 .content{
     background:#FD8;
