--- a/a.css
+++ b/a.css
@@ -61,9 +61,11 @@ a img { border: none; }
 }
 .side{
     width:280px;
+    height:300px;
     background:#DFA;
 }
 .posts{
+    height:300px;
     background:#ADF;
 }
 .footer{
