--- a/a.css
+++ b/a.css
@@ -47,11 +47,10 @@ a img { border: none; }
 
 .header {
     height:120px;
+    line-height:120px;
     width:960px;
-    display:block;
     margin-left:auto;
     margin-right:auto;
-    line-height:120px;
     text-align:center;
     background:#ccc;
     font:3em bold;
@@ -61,11 +60,11 @@ a img { border: none; }
 }
 .side{
     width:280px;
-    height:300px;
+    min-height:400px;*+height:100%;_height:400px;
     background:#DFA;
 }
 .posts{
-    height:300px;
+    min-height:400px;*+height:100%;_height:400px;
     background:#ADF;
 }
 .footer{
