--- a/a.css
+++ b/a.css
@@ -47,7 +47,7 @@ a img { border: none; }
 
 .header {
     height:120px;
-    line-height:120px;
+    line-height:100%;
     width:960px;
     margin-left:auto;
     margin-right:auto;
