--- a/a.css
+++ b/a.css
@@ -47,14 +47,16 @@ a img { border: none; }
 
 .header {
     height:120px;
-    padding:40px;
     width:960px;
     margin-left:auto;
     margin-right:auto;
-    text-align:center;
     background:#ccc;
-    font:3em bold;
 }
+
+.header a{
+    font:2em bold;
+}
+
 .content{
     background:#FD8;
 }
