--- a/a.css
+++ b/a.css
@@ -63,7 +63,13 @@ a img { border: none; }
 
 .header a{
     font:2em bold;
-
+    text-decoration:none;
+}
+.header a:link,a:visited{
+    color:#555555;
+}
+.header a:hover,a:active{
+    color:red;
 }
 
 .content{
