--- a/a.css
+++ b/a.css
@@ -69,7 +69,6 @@ a img { border: none; }
     width:970px;
     margin-left:auto;
     margin-right:auto;
-    background:#ccc;
 }
 
 .header a{
@@ -83,19 +82,16 @@ a img { border: none; }
     color:red;
 }
 
-.content{
-    background:#FD8;
-}
+.content{}
+
 .side{
     width:280px;
     min-height:400px;*+height:100%;_height:400px;
-    background:#DFA;
 }
 .posts{
     min-height:400px;*+height:100%;_height:400px;
-    background:#ADF;
 }
 .footer{
-    background:#EDF;
+    padding:10px;
 }
 
