--- a/a.css
+++ b/a.css
@@ -99,7 +99,9 @@ a img { border: none; }
     padding:10px;
 }
 .posts dl{
-    width:100%;
+    clear:both;
+    width:750px;
+    display:block;
     min-height:100px;*+height:100%;_height:100px;
     border:1px solid #eee;
     padding:5px;
