--- a/a.css
+++ b/a.css
@@ -47,6 +47,11 @@ a img { border: none; }
 .ml160{margin-left:160px}
 .ml180{margin-left:180px}
 .ml200{margin-left:200px}
+.ml220{margin-left:220px}
+.ml240{margin-left:240px}
+.ml260{margin-left:260px}
+.ml280{margin-left:280px}
+.ml300{margin-left:300px}
 
 .main {  margin:0 auto;  width:970px; padding-top:10px; }
 
