--- a/a.css
+++ b/a.css
@@ -112,7 +112,7 @@ a img { border: none; }
 }
 .posts dl{
     clear:both;
-    width:100%;
+    width:738px;
     display:block;
     min-height:100px;*+height:100%;_height:100px;
     border:1px solid #eee;
