--- a/a.css
+++ b/a.css
@@ -117,16 +117,16 @@ a img { border: none; }
 }
 
 dl{
-    width:738px;
+    width:728px;
     clear:both;
     margin-bottom:5px;
     float:left;
     border:1px solid #EFEFEF;
 }
-dt,dd{
-    padding:2px 5px;float:left;
+dt{
+    padding:2px 5px;float:left;width:200px;
 }
-dd{ position:absolute; right:5px;}
+dd{ margin-left:220px;padding 2px 5px;}
 
 .footer{
     padding:10px;
