--- a/a.css
+++ b/a.css
@@ -102,12 +102,12 @@ a img { border: none; }
 .side{
     width:200px;
     min-height:300px;*+height:100%;_height:300px;
-    background:#FAD;
+    /*background:#FAD;*/
 }
 .posts{
     width:738px;
     min-height:400px;*+height:100%;_height:400px;
-    background:#DAF;
+    /*background:#DAF;*/
 }
 .wrapper{
     width:100%;
@@ -117,7 +117,7 @@ a img { border: none; }
 }
 
 dl{
-    width:728px;
+    width:710px;
     clear:both;
     margin-bottom:5px;
     float:left;
