--- a/a.css
+++ b/a.css
@@ -124,7 +124,8 @@ dl{
 }
 dt{
     padding:5px 20px;border-bottom:1px solid #efefef;
-    font-size:1em;
+    font-size:1.2em;
+    color:#383838;
 }
 dd{ padding:5px 20px;}
 
