--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,8 +23,8 @@
                     <li><a href="http://weibo.com/alexislm" target="_blank">关注本猿</a></li>
                     <li><a href="/about/">关于本猿</a></li>
                 </ul>
-                <h1><a href="/">压力很大同志的压力很大</a></h1>
-                <h2>程序猿-超级懒</h2>
+                <h3><a href="/">压力就是动力</a></h3>
+                <strong>程序猿-超级懒</strong>
             </div>
         </div>
                 
@@ -49,7 +49,7 @@
                     </table>
                 </div>
                 <div class="about">
-                    <h3><a href="/about/">关于本猿</a></h3>
+                    <h4><a href="/about/">关于本猿</a></h4>
                     
                     <a href="/about/"><img src="/images/me.jpg" alt="ME" /></a>
                     <div>
