--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,14 +23,23 @@
                     <li><a href="http://weibo.com/alexislm" target="_blank">关注本猿</a></li>
                     <li><a href="/about/">关于本猿</a></li>
                 </ul>
-                <h3><a href="/">压力就是动力</a></h3>
-                <strong>程序猿-超级懒</strong>
+                <h1><a href="/">压力就是动力</a></h1>
+                <h3>程序猿-超级懒</h3>
             </div>
         </div>
                 
         <div id="content">
             <div class="inner">
                 {{ content }}
+                 <div class="about">
+                    <h4><a href="/about/">关于本猿</a></h4>
+                    
+                    <a href="/about/"><img src="/images/me.jpg" alt="ME" /></a>
+                    <div>
+                        This is yet a short description of myself. Try to keep it short. <a href="/about/">更多</a>
+                    </div>
+                </div>
+
             </div>
         </div>
         
@@ -47,14 +56,6 @@
                         </tr>
                     {% endfor %}
                     </table>
-                </div>
-                <div class="about">
-                    <h4><a href="/about/">关于本猿</a></h4>
-                    
-                    <a href="/about/"><img src="/images/me.jpg" alt="ME" /></a>
-                    <div>
-                        This is yet a short description of myself. Try to keep it short. <a href="/about/">更多</a>
-                    </div>
                 </div>
             </div>
         </div>
