--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,17 +29,16 @@
         </div>
                 
         <div id="content">
-            <div class="inner">
+            <div class="main">
                 {{ content }}
-                 <div class="about">
-                    <h4><a href="/about/">关于本猿</a></h4>
+            </div>
+            <div class="side">
+                <h4><a href="/about/">关于本猿</a></h4>
                     
-                    <a href="/about/"><img src="/images/me.jpg" alt="ME" /></a>
-                    <div>
+                <a href="/about/"><img src="/images/me.jpg" alt="ME" /></a>
+                <div>
                         This is yet a short description of myself. Try to keep it short. <a href="/about/">更多</a>
-                    </div>
                 </div>
-
             </div>
         </div>
         
