--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
             </div>
         </div>
                 
-        <div id="content">
+        <div id="content" class="clearfix">
             <div class="main">
                 {{ content }}
             </div>
