--- a/css/main.css
+++ b/css/main.css
@@ -43,6 +43,11 @@ body {
     #header h2 img {
       margin-left: 3px; }
 
+#content{
+    width: 865px;
+    margin: auto;
+}
+
 #content .inner {
   text-align: left;
   width: 725px;
