--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
  
   <title>{{ page.title }}</title> 
-  <meta name="author" content="YOUR_NAME" />
+  <meta name="author" content="压力很大同志的Blog" />
   <link href='http://fonts.googleapis.com/css?family=Lato:light,regular,bold' rel='stylesheet' type='text/css'>
   <link href="/css/reset.css" media="screen" rel="stylesheet" type="text/css" /> 
   <link href="/css/main.css" media="screen" rel="stylesheet" type="text/css" /> 
@@ -23,7 +23,7 @@
                     <li><a href="http://weibo.com/alexislm" target="_blank">关注本猿</a></li>
                     <li><a href="/about/">关于本猿</a></li>
                 </ul>
-                <h1><a href="/">压力就是动力</a></h1>
+                <h1><a href="/">囧~压力好大</a></h1>
                 <h3>程序猿-超级懒</h3>
             </div>
         </div>
