--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,11 +33,9 @@
                 {{ content }}
             </div>
             <div class="side">
-                <h4><a href="/about/">关于本猿</a></h4>
-                    
-                <a href="/about/"><img src="/images/me.jpg" alt="ME" /></a>
+                <a href="/about/"><img src="/images/me.jpeg" alt="ME" /></a>
                 <div>
-                        This is yet a short description of myself. Try to keep it short. <a href="/about/">更多</a>
+                        80后，程序猿 ，咕咚网扫地大爷 <a href="/about/">更多</a>
                 </div>
             </div>
         </div>
@@ -45,7 +43,7 @@
         <div id="footer" class="clearfix">
             <div class="inner">
                 <div class="archives">
-                    <h3>Archives</h3>
+                    <h2>文章列表</h2>
             
                     <table>
                     {% for post in site.posts %}
