--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
                 {{ content }}
             </div>
             <div class="side">
-                <a href="/about/"><img src="/images/me.jpeg" alt="ME" /></a>
+                <a href="/about/"><img src="/images/me.png" alt="ME" /></a>
                 <div>
                         80后，程序猿 ，咕咚网扫地大爷 <a href="/about/">更多</a>
                 </div>
