--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,24 +11,19 @@ layout: default
     <div class="meta">
         Posted on <a href="{{ page.url }}">{{ page.date | date_to_string }}</a>
     </div>
-    
     <div id="disqus_thread"></div>
     <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-        var disqus_shortname = 'YOUR_DISQUS_SHORTNAME'; // required: replace example with your forum shortname
-
-        // The following are highly recommended additional parameters. Remove the slashes in front to use.
-        // var disqus_identifier = 'unique_dynamic_id_1234';
-        var disqus_url = 'YOUR_BASE_URL{{ page.url }}';
-        //var disqus_developer = 1; // developer mode is on
+        var disqus_shortname = 'ipconfiger'; // required: replace example with your forum shortname
 
         /* * * DON'T EDIT BELOW THIS LINE * * */
         (function() {
             var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-            dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
             (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
         })();
     </script>
     <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-    
+    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+     
 </div>
