--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,7 @@
         <div id="header">
             <div class="inner">
                 <ul>
+                    <li><a href="http://www.cnblogs.com/Alexander-Lee/">旧BLOG</a></li>
                     <li><a href="http://weibo.com/alexislm" target="_blank">关注本猿</a></li>
                     <li><a href="/about/">关于本猿</a></li>
                 </ul>
