--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
   <link href='http://fonts.googleapis.com/css?family=Lato:light,regular,bold' rel='stylesheet' type='text/css'>
   <link href="/css/reset.css" media="screen" rel="stylesheet" type="text/css" />
   <link href="/css/highlight.css" media="screen" rel="stylesheet" type="text/css"> 
-  <link href="/css/monokai.css" media="screen" rel="stylesheet" type="text/css"> 
+  <link href="/css/colorful.css" media="screen" rel="stylesheet" type="text/css"> 
   <link href="/css/main.css" media="screen" rel="stylesheet" type="text/css" /> 
   <link rel="alternate" type="application/rss+xml" href="/atom.xml" title="RSS feed">
 </head> 
