--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,6 +59,8 @@
                 </div>
             </div>
         </div>
-        
+    <script type="text/javascript">
+        hljs.initHighlightingOnLoad();
+    </script>
     </body> 
 </html>
