--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
   <link href="/css/colorful.css" media="screen" rel="stylesheet" type="text/css"> 
   <link href="/css/main.css" media="screen" rel="stylesheet" type="text/css" /> 
   <link rel="alternate" type="application/rss+xml" href="/atom.xml" title="RSS feed">
+  <script src="http://yandex.st/highlightjs/8.0/highlight.min.js"></script>
 </head> 
  
     <body> 
