--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,10 +12,9 @@
   <meta name="author" content="压力很大同志的Blog" />
   <link href='http://fonts.googleapis.com/css?family=Lato:light,regular,bold' rel='stylesheet' type='text/css'>
   <link href="/css/reset.css" media="screen" rel="stylesheet" type="text/css" />
-  <link href="/css/highlight.css" media="screen" rel="stylesheet" type="text/css"> 
-  <link href="/css/colorful.css" media="screen" rel="stylesheet" type="text/css"> 
   <link href="/css/main.css" media="screen" rel="stylesheet" type="text/css" /> 
   <link rel="alternate" type="application/rss+xml" href="/atom.xml" title="RSS feed">
+  <link rel="stylesheet" href="http://yandex.st/highlightjs/8.0/styles/default.min.css">
   <script src="highlight.min.js"></script>
 </head> 
  
